Added card example to EntriesList

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,6 +67,12 @@ body {
   background-color: rgba(255, 255, 255, 0.8);
 }
 
+/* NAV */
+.navbar-brand {
+  color: rgb(255, 136, 0)
+}
+
+
 /* MODAL WINDOW*/
 .modal {
   position: fixed;
